--- a/Inventory Manager/Forms/MainForms/Homepage.resx
+++ b/Inventory Manager/Forms/MainForms/Homepage.resx
@@ -2774,49 +2774,49 @@
   </data>
   <data name="PrefButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAdcAAAHXAYySCGgAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAJYElEQVR4Xu2bCVBV1xnH3+OxPRbZEQEBQRFFEJAoIKCIKEZCXDEIxCDR1izWSqs1UaAZY+ISgowx
-        uIxLl0RjhETa2NS0pi7R2AJ1YqUmWhs1ba2NJjjTcbL49fsf3rk+nlfeMoQivP/MT3j3ft+59/vfd889
-        51zU2GVXl0jLRDNFzIvMNmYTs4AJYnq1qpnrDN2Dr5ktjA9zX8qNSWeWMnuYU1kTc2ecvXRzTuuVtpci
-        o6Jvuri6UtIDKTRvwZO0rnY77dzTSDV1P6M5xfPJy9un3Qit9gL/HMT0aOmYMMZBfNJopjA3GeWK6nQ6
-        qtu1j1ovtyl8dPHzDp+NOdr8CU3IeVDmn2PcmR6l/szzzGGmjcGJ7magBoZSM7Jo6U+qxJX9Y+tnqoV2
-        xl8+/YKyJ02VJuCW6VHazoiT07t5kKOjI37/L3OcuYXt1Zt3qhZmDcdaLpC7h+dt7i+/4jajmB6jDQzN
-        X7yS3vnTPyl1fK68UuTs7CJ+4t5WK8paliyrkG2jL+kxKmDooYL5dLD5Ku0/ep4qqnfT9rdO0Lb64+KE
-        0cGpFaTGmb/foLcPnaDV6zdRQVEpjcueTD99caPY1/LxVQoMGoA2+ZugSWKMFcCsZvDN+zPzcyaD+c4V
-        wVB0bIIwwJiG4xf5tnAnV72ezly8flex4PCpVqrd+gsqW7SEHkhJJzeOR3umVK55WcRXvVAjt73ESCUz
-        V5kOOQaeYzqTE4NHLPDEBlv0L0cnJzpw8rIofMXarRQVEyd6fN4nqD94VHSA6Ah/uLySsifnUWB/cTVN
-        QUf6e+YFZjqDJ8k33j6+t0+dvUIVa6pl3CsM5MF8xlBR2kA6WZFJreXxVJsXRt6uyvFnM2p6nBH9lBEf
-        MFY/aRoZenn3O8KAiMExsrErTCt+9/MPJAcHB+MDkZYN8ooMp0EPTiC/YUPkdhRsKtHRhg+KIq1WtIFb
-        IA07WIsYyk8aQG3b8gVf1kykG6sSaV9hlGyzCYEmcmaucad9OzYugUDQgBAZ/30EWKOVDGXnFdC0uQup
-        n5dh8KLRjGYweIER+Pw35nXmCD6PWrqQpjXuEoxcVCJzKhlTBWu1WtnGp8w0bDQIj1za+9RoxYC2LVOF
-        ASDQwwk5MMwVwUbKZ8Q3Ud6OrzUckueAfsQqZTMyWYIrL4evjgy+qlIY81PUw5MUAybUPifzfo0AFeH+
-        RMeHwZax6hk6umrcHQO25isGJAW7yXbRSRprHyP6H2nA2UtfUlhEJGJhmFWPWoz8VjA1DIobwnQm7Cf/
-        EUNp7ocNVNLcSMWn3iKds7ha10SE5bLFAFyYWxhmn75wTTEAPLV0hYxX+yZ2mTD7+w8KRuGPtvxKEBCn
-        9B2RCLJQthjwPYYeKSnrUDx478QZ7me0iD/P4DzNqpS5zGBGZw3fMDT1tRrFgGGF+fJk8SRQy1EDI0NL
-        DLhhiAei5/9l/W/vMgBg3IL9jHGOKah5HqP5QqvVUD9nncCBf+dt/Ox36xQnJ2cRN+aZJxQDMtb8SGzT
-        6RxVc9RwMDxqzRmAsYiSY3gaHWs5r2rAw7MKxX5nF1clB59Rm6wTNfM2GKShEA8Xai1NFgS4OZGO5wOr
-        NrzaKY+UPSkajcqfqBgw/cA2sS2UOyK1HDViRiSIHHMGlFetV3LSsiaJbbl50+8qfs/bv2u/AK56Wra6
-        WslBTahN1oma0QZjmwE4IeR6RYYpBjzKnaGLlydhUPXs2k2qeabYYgAK8/HzF9sx5JbFY6AVOjBcbM8r
-        KO5wHKsMwFds6qwis+ArpnXQUuGxNxQTQtJGiYbH8fNZLceUoOBQEW/OgJyHZnbISxwzVmzv5+Ut5hgw
-        YNHiZe3b+OlgHAtQk8UGGHZYTM6W5xUD4he233/WYkEneE8wTIcBaRlZqvsl1hiAdbzlFrCfocSn5ykG
-        TKitlA1/ZIgxxxnGEgMwKTLNPc3Q3sbDwoDRqRkyFguzprFfW2MAHjOWaCxDA7NSFAPmvP861v/QxlkR
-        YV7t44CVGWIILKi7MxQ2MsB0JAjtZdQMwAzXVLe+CwP0zFd6f1/FAOAZGoQ2MBz1RpAZCQP+sCBGKdqY
-        nm4A1MzQrN/sUgyImJwpG8ccw5zuewPqGBq/4RnFgOTyx2XjmF/cSyHMGwzWH8nTRSfm/6Y48lMG+xkY
-        PYMxVtcbMNRHTzyAxjDRUs1nKPaxmYoBuTvXycaxqqwmzC5FB+bqxIXyiXWGF4NYBrcV3lFI2WxAnL87
-        RoP/xo4OBhyZM5ISAvqZmw0aK5ahoOQ4xYCik/Xk4CiGuP8QEXcrkaHUwb70eV3end6/EzbNax8wMZvR
-        gEE2G3C4IJ4yQ33isKODAeDy7FR0bpYKU+k2Jzc9lTQdUEzwHaas5gxEkImGMxQf5kXn1k+iSxunmKVq
-        xjDZHqbsUjYbAFoeSxCddAcDmkuSqHBQIF6WWCOsAVL+vlcUA6JnTZEnMxMBJoJp7zMyxiL41sTMMZ6R
-        stmAFq6zLHFAOHZ0MCA+gO8NjeYTkWK5MPCgtMofKAakVS2RJ7MWASryYrAyjM4NiyjkycPaoJBwQUD/
-        YJmPTvJjBv1JCmMsmw0Y1d8Ds0PR13UwAEEIxg4rhN5ZXHVpQP6bm+XJ4JWbOWERk0qfflZZkt9x4EOZ
-        /x4C7iGbDUDNvA10iQHBDPkOjVQMKGlqJCd38QzHy1XTdUBTCQOeKK+gk+euC/YfapIneF8YAF3R8oxr
-        7gdvKiYEjR4pDyJ6204kDMALWBQC3j12WubeNwaIEV3ujnWKASNKZ8uDlCGgE/1/DdA7OlBuhI/ARSeW
-        m75lMEqzhr8y5B87hMJz0gV+w5WXJVhiV8uR4MUHRcfEilUekJmVI3PxykwtB1xiKCV9vMjxNSySMFia
-        N439FrXJOlEzbwPin74Mj+K8XOnIysw+BWpWDAjzc1MdfvZmULPdALsB3WDAwR+PpaQIb4oIcLMK5Ly7
-        PF21za6g2wwYE+UrD2Q1yFVrsyvoNgOGh3iKAzUVJymDEHMgFjnIVWuzK7AbYDegmw1YnBhC5cmhFoHY
-        XmMA/vLLcCCrKR4bptpmV9BtBlx7NY92LBxFG0tGWgVykKvWZlfQbQb0VOwG2A2wG2A34I4Bvnpq28I9
-        bh8izE9vZIC3s+qr6d4MarYbYDDgdqC7IzUUD+5ToGbUDgNaGOlGX0P8PwS8RKhlTNfRezuoWbwdtqvv
-        SqP5HzSswl/JA/oaAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAlgSURBVHhe7ZsJ
+        UFXXGcff47E9FtkRAQFBEUUQkCggoIgoRkJcMQjEINHWLNZKqzVRoBlj4hKCjDG4jEuXRGOERNrY1LSm
+        LtHYAnVipSZaGzVtrY0mONNxsvj1+x/euT6eV94yhCK8/8xPePd+37n3+993zz3nXNTYZVeXSMtEM0XM
+        i8w2ZhOzgAlierWqmesM3YOvmS2MD3Nfyo1JZ5Yye5hTWRNzZ5y9dHNO65W2lyKjom+6uLpS0gMpNG/B
+        k7Sudjvt3NNINXU/oznF88nL26fdCK32Av8cxPRo6ZgwxkF80mimMDcZ5YrqdDqq27WPWi+3KXx08fMO
+        n4052vwJTch5UOafY9yZHqX+zPPMYaaNwYnuZqAGhlIzsmjpT6rElf1j62eqhXbGXz79grInTZUm4Jbp
+        UdrOiJPTu3mQo6Mjfv8vc5y5he3Vm3eqFmYNx1oukLuH523uL7/iNqOYHqMNDM1fvJLe+dM/KXV8rrxS
+        5OzsIn7i3lYrylqWLKuQbaMv6TEqYOihgvl0sPkq7T96niqqd9P2t07Qtvrj4oTRwakVpMaZv9+gtw+d
+        oNXrN1FBUSmNy55MP31xo9jX8vFVCgwagDb5m6BJYowVwKxm8M37M/NzJoP5zhXBUHRsgjDAmIbjF/m2
+        cCdXvZ7OXLx+V7Hg8KlWqt36CypbtIQeSEknN45He6ZUrnlZxFe9UCO3vcRIJTNXmQ45Bp5jOpMTg0cs
+        8MQGW/QvRycnOnDysih8xdqtFBUTJ3p83ieoP3hUdIDoCH+4vJKyJ+dRYH9xNU1BR/p75gVmOoMnyTfe
+        Pr63T529QhVrqmXcKwzkwXzGUFHaQDpZkUmt5fFUmxdG3q7K8WczanqcEf2UER8wVj9pGhl6efc7woCI
+        wTGysStMK3738w8kBwcH4wORlg3yigynQQ9OIL9hQ+R2FGwq0dGGD4oirVa0gVsgDTtYixjKTxpAbdvy
+        BV/WTKQbqxJpX2GUbLMJgSZyZq5xp307Ni6BQNCAEBn/fQRYo5UMZecV0LS5C6mfl2HwotGMZjB4gRH4
+        /DfmdeYIPo9aupCmNe4SjFxUInMqGVMFa7Va2canzDRsNAiPXNr71GjFgLYtU4UBINDDCTkwzBXBRspn
+        xDdR3o6vNRyS54B+xCplMzJZgisvh6+ODL6qUhjzU9TDkxQDJtQ+J/N+jQAV4f5Ex4fBlrHqGTq6atwd
+        A7bmKwYkBbvJdtFJGmsfI/ofacDZS19SWEQkYmGYVY9ajPxWMDUMihvCdCbsJ/8RQ2nuhw1U0txIxafe
+        Ip2zuFrXRITlssUAXJhbGGafvnBNMQA8tXSFjFf7JnaZMPv7DwpG4Y+2/EoQEKf0HZEIslC2GPA9hh4p
+        KetQPHjvxBnuZ7SIP8/gPM2qlLnMYEZnDd8wNPW1GsWAYYX58mTxJFDLUQMjQ0sMuGGIB6Ln/2X9b+8y
+        AGDcgv2McY4pqHkeo/lCq9VQP2edwIF/52387HfrFCcnZxE35pknFAMy1vxIbNPpHFVz1HAwPGrNGYCx
+        iJJjeBodazmvasDDswrFfmcXVyUHn1GbrBM18zYYpKEQDxdqLU0WBLg5kY7nA6s2vNopj5Q9KRqNyp+o
+        GDD9wDaxLZQ7IrUcNWJGJIgccwaUV61XctKyJoltuXnT7yp+z9u/a78ArnpatrpayUFNqE3WiZrRBmOb
+        ATgh5HpFhikGPMqdoYuXJ2FQ9ezaTap5pthiAArz8fMX2zHklsVjoBU6MFxszyso7nAcqwzAV2zqrCKz
+        4CumddBS4bE3FBNC0kaJhsfx81ktx5Sg4FARb86AnIdmdshLHDNWbO/n5S3mGDBg0eJl7dv46WAcC1CT
+        xQYYdlhMzpbnFQPiF7bff9ZiQSd4TzBMhwFpGVmq+yXWGIB1vOUWsJ+hxKfnKQZMqK2UDX9kiDHHGcYS
+        AzApMs09zdDexsPCgNGpGTIWC7OmsV9bYwAeM5ZoLEMDs1IUA+a8/zrW/9DGWRFhXu3jgJUZYggsqLsz
+        FDYywHQkCO1l1AzADNdUt74LA/TMV3p/X8UA4BkahDYwHPVGkBkJA/6wIEYp2piebgDUzNCs3+xSDIiY
+        nCkbxxzDnO57A+oYGr/hGcWA5PLHZeOYX9xLIcwbDNYfydNFJ+b/pjjyUwb7GRg9gzFW1xsw1EdPPIDG
+        MNFSzWco9rGZigG5O9fJxrGqrCbMLkUH5urEhfKJdYYXg1gGtxXeUUjZbECcvztGg//Gjg4GHJkzkhIC
+        +pmbDRorlqGg5DjFgKKT9eTgKIa4/xARdyuRodTBvvR5Xd6d3r8TNs1rHzAxm9GAQTYbcLggnjJDfeKw
+        o4MB4PLsVHRulgpT6TYnNz2VNB1QTPAdpqzmDESQiYYzFB/mRefWT6JLG6eYpWrGMNkepuxSNhsAWh5L
+        EJ10BwOaS5KocFAgXpZYI6wBUv6+VxQDomdNkSczEwEmgmnvMzLGIvjWxMwxnpGy2YAWrrMscUA4dnQw
+        ID6A7w2N5hORYrkw8KC0yh8oBqRVLZEnsxYBKvJisDKMzg2LKOTJw9qgkHBBQP9gmY9O8mMG/UkKYyyb
+        DRjV3wOzQ9HXdTAAQQjGDiuE3llcdWlA/pub5cnglZs5YRGTSp9+VlmS33HgQ5n/HgLuIZsNQM28DXSJ
+        AcEM+Q6NVAwoaWokJ3fxDMfLVdN1QFMJA54or6CT564L9h9qkid4XxgAXdHyjGvuB28qJgSNHikPInrb
+        TiQMwAtYFALePXZa5t43BogRXe6OdYoBI0pny4OUIaAT/X8N0Ds6UG6Ej8BFJ5abvmUwSrOGvzLkHzuE
+        wnPSBX7DlZclWGJXy5HgxQdFx8SKVR6QmZUjc/HKTC0HXGIoJX28yPE1LJIwWJo3jf0Wtck6UTNvA+Kf
+        vgyP4rxc6cjKzD4FalYMCPNzUx1+9mZQs90AuwHdYMDBH4+lpAhvighwswrkvLs8XbXNrqDbDBgT5SsP
+        ZDXIVWuzK+g2A4aHeIoDNRUnKYMQcyAWOchVa7MrsBtgN6CbDVicGELlyaEWgdheYwD+8stwIKspHhum
+        2mZX0G0GXHs1j3YsHEUbS0ZaBXKQq9ZmV9BtBvRU7AbYDbAbYDfgjgG+emrbwj1uHyLMT29kgLez6qvp
+        3gxqthtgMOB2oLsjNRQP7lOgZtQOA1oY6UZfQ/w/BLxEqGVM19F7O6hZvB22q+9Ko/kfNKzCX8kD+hoA
+        AAAASUVORK5CYII=
 </value>
   </data>
   <data name="RolesBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
